--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 buildscript {
+    dependencies {
+        //noinspection GradleDependency
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+    }
     ext {
         compose_version = '1.1.0-beta01'
     }
