--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.coufie.challengechaptereight">
+    package="com.coufie.challengechaptereight" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".FilmApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,7 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChallengeChapterEight"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31" >
+        <activity
+            android:name=".FilmDetailCompose"
+            android:exported="false"
+            android:label="FilmDetailCompose"
+            android:theme="@style/Theme.ChallengeChapterEight" />
+
         <activity
             android:name=".HomeComposeActivity"
             android:exported="false"
@@ -37,7 +47,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ChallengeChapterEight">
+            android:theme="@style/Theme.ChallengeChapterEight"
+            tools:ignore="RedundantLabel">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
